tests/134_equality_type_errors.pirx
// Equality is not supported for slices or structs containing them; % only works on integers.
struct Buffer {
  data: []int;
  len: int;
}

func main(): int {
  var a = new([]int, 3);
  var b = new([]int, 3);
  var aeq = a == b;

  var b1: Buffer;
  var b2: Buffer;
  var beq = b1 != b2;

  var m = 1.5 % 0.5;

  return 0;
}
